[gd_scene load_steps=2 format=3 uid="uid://bq4wk2l9sd5fh"]

[ext_resource type="Script" path="res://scripts/ui/command_panel_ui.gd" id="1_cmd"]

[node name="CommandPanelUI" type="PanelContainer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -200.0
offset_right = 180.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_cmd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="CommandLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Worker Commands"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonsGrid" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="BuildHouseButton" type="Button" parent="VBoxContainer/ButtonsGrid"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Build House
(ðŸªµ50)"

[node name="BuildBarracksButton" type="Button" parent="VBoxContainer/ButtonsGrid"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Build Barracks
(ðŸªµ150 ðŸ’°50)"

[node name="BuildTownCenterButton" type="Button" parent="VBoxContainer/ButtonsGrid"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Build Town Center
(ðŸªµ400 ðŸ’°200)"
